[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/dialogic/Documentation/Theme/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/dialogic/Documentation/Theme/Roboto/Roboto-Italic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/dialogic/Documentation/Theme/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/dialogic/Documentation/Theme/Roboto/Roboto-LightItalic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://addons/dialogic/Documentation/Theme/Roboto/Roboto-BoldItalic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://addons/dialogic/Documentation/Nodes/DocsPageViewer.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Image" id=8]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=7]
flags = 4
flags = 4
image = SubResource( 8 )
size = Vector2( 16, 16 )

[node name="DocsPageViewer" type="RichTextLabel"]
margin_right = 1024.0
margin_bottom = 600.0
focus_mode = 2
size_flags_vertical = 3
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 2 )
custom_fonts/italics_font = SubResource( 3 )
custom_fonts/bold_font = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
selection_enabled = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Editing" type="HBoxContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -202.807
margin_top = 8.09956
margin_right = -8.80664
margin_bottom = 33.0996
grow_horizontal = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefreshPage" type="Button" parent="Editing"]
margin_left = 94.0
margin_right = 154.0
margin_bottom = 25.0
text = "Refresh"

[node name="EditPage" type="Button" parent="Editing"]
margin_left = 158.0
margin_right = 194.0
margin_bottom = 25.0
text = "Edit"

[node name="Up" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.5946
margin_top = -41.6541
margin_right = -10.5946
margin_bottom = -11.6541
rect_min_size = Vector2( 30, 30 )
hint_tooltip = "Back to top"
icon = SubResource( 7 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentMenu" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -207.0
margin_top = -590.0
margin_right = -49.0
margin_bottom = -13.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 50, 40 )
size_flags_horizontal = 0
size_flags_vertical = 9
custom_constants/separation = 20
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Control" parent="ContentMenu"]
visible = false
margin_top = 537.0
margin_right = 158.0
margin_bottom = 537.0

[node name="VBox" type="VBoxContainer" parent="ContentMenu/Panel"]
margin_top = -88.0
margin_right = 156.0
margin_bottom = 4.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleContents" type="Button" parent="ContentMenu"]
margin_top = 557.0
margin_right = 158.0
margin_bottom = 577.0
toggle_mode = true
text = "Contents"

[connection signal="meta_clicked" from="." to="." method="_on_meta_clicked"]
[connection signal="pressed" from="Editing/RefreshPage" to="." method="_on_RefreshPage_pressed"]
[connection signal="pressed" from="Editing/EditPage" to="." method="_on_EditPage_pressed"]
[connection signal="pressed" from="Up" to="." method="_on_Up_pressed"]
[connection signal="toggled" from="ContentMenu/ToggleContents" to="." method="_on_ToggleContents_toggled"]
